--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,50 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+ body {
+   font-family: 'Arial', sans-serif;
+   background-color: #f4f4f4;
+   margin: 0;
+   padding: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+ }
+
+ .container {
+   background-color: #fff;
+   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+   padding: 20px;
+   border-radius: 8px;
+   text-align: center;
+ }
+
+ h1 {
+   color: black;
+ }
+
+ input[type="file"] {
+   padding: 10px;
+   margin-top: 10px;
+ }
+
+ div.chart-container {
+   width: 40%;
+   margin-top: 20px;
+ }
+
+ div.colormap {
+   display: flex;
+   justify-content: space-between;
+   margin-top: 20px;
+ }
+
+ div.colormap-item {
+   display: flex;
+   align-items: center;
+ }
+
+ div.colormap-color {
+   width: 20px;
+   height: 20px;
+   margin-right: 5px;
+   border-radius: 50%;
+ }
